adds trick model

--- a/app/views/homes/show.html.erb
+++ b/app/views/homes/show.html.erb
@@ -1,7 +1,13 @@
 <div id="homepage-title">
   <h1>Welcome to MagicDB</h1>
-<div>
+</div>
 
 <div id="homepage-description">
   The most comprehensive magic trick database in the world. For magicians, by magicians.
-<div>
+</div>
+
+<p>
+  <div id="add-trick-button">
+    <%= button_to "Add Trick", new_trick_path, method: :get %>
+  </div>
+</p>
