adds container and formatting for embedded videos

--- a/app/views/tricks/show.html.erb
+++ b/app/views/tricks/show.html.erb
@@ -10,6 +10,8 @@
   </p>
 </div>
 
-<%= embed(@trick.youtube_url) %>
+<div class="embed-container">
+  <%= embed(@trick.youtube_url) %>
+</div>
 
 <%= button_to "Home", root_path, method: :get %>
