--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 
   <div id="header">
     <% if signed_in? %>
-      Signed in as: <%= current_user.email %> <strong>|</strong> <%= link_to t('.sign_out'), sign_out_path, :method => :delete %>
+      Signed in as: <%= link_to current_user.email, user_path(current_user.id) %> <strong>|</strong> <%= link_to t('.sign_out'), sign_out_path, :method => :delete %>
     <% else %>
       <%= link_to t('.sign_in'), sign_in_path %>
     <% end %>
