--- a/app/views/tricks/show.html.erb
+++ b/app/views/tricks/show.html.erb
@@ -1,10 +1,10 @@
-<div id="trick-name">
+<div class="trick-name">
   <p>
     <h2><strong>Trick Name: </strong><%= @trick.name %></h2>
   </p>
 </div>
 
-<div id="trick-description">
+<div class="trick-description">
   <p>
     <h3><strong>Description: </strong><%= @trick.description %></h3>
   </p>
