extracts author method on post

--- a/app/views/homes/show.html.erb
+++ b/app/views/homes/show.html.erb
@@ -32,7 +32,7 @@
   <h3>Magic News</h3>
   <ul>
     <% @posts.each do |post| %>
-      <li><%= link_to post.title, post %> submitted by: <%= post.user.email %> <%= time_ago_in_words(post.created_at) %> ago</li>
+      <li><%= link_to post.title, post %> submitted by: <%= post.author %> <%= time_ago_in_words(post.created_at) %> ago</li>
     <% end %>
   </ul>
 </div>
