--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,6 @@
 <div class="post-title">
   <p>
-    <h2><strong><%= @post.title %></strong></h2> by: <%=  @post.user.email %>
+    <h2><strong><%= @post.title %></strong></h2> by: <%=  @post.author %>
   </p>
 </div>
 
