orders collections on homes#show by recently created_at

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,12 +1,12 @@
 <div class="post-title">
   <p>
-    <h2><strong><%= @post.title %></strong></h2> by: <%=  @post.author %>
+    <h2><strong><%= @post.title %></strong></h2> by: <%= @post.author %>
   </p>
 </div>
 
 <div class="post-body">
   <p>
-    <h3><%= @post.body %></h3>
+    <%= @post.body %>
   </p>
 </div>
 
