--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -11,3 +11,7 @@
 </div>
 
 <%= button_to "Home", root_path, method: :get %>
+
+<%= button_to "Edit", edit_post_path(@post), method: :get %>
+
+<%= button_to "Delete", post_path(@post), method: :delete %>
