adds admin restrictions on magic news posts

--- a/app/views/homes/show.html.erb
+++ b/app/views/homes/show.html.erb
@@ -11,7 +11,7 @@
       <div class="add-trick-button">
         <%= button_to "Add Trick", new_trick_path, method: :get %>
       </div>
-  <% if signed_in? %>
+  <% if current_user.admin? %>
       <div class="add-post-button">
         <%= button_to "Make Post", new_post_path, method: :get %>
       </div>
