--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,6 +12,7 @@
 
 <%= button_to "Home", root_path, method: :get %>
 
-<%= button_to "Edit", edit_post_path(@post), method: :get %>
-
-<%= button_to "Delete", post_path(@post), method: :delete %>
+<% if current_user.admin? %>
+  <%= button_to "Edit", edit_post_path(@post), method: :get %>
+  <%= button_to "Delete", post_path(@post), method: :delete %>
+<% end %>
