--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,3 +1,16 @@
+@import "bourbon";
+@import "neat";
+@import "home";
+
+
+.homepage-title {
+font-family: $helvetica;
+}
+
+.recent-posts {
+  @include span-columns(6);
+}
+
 .embed-container {
   position: relative;
   padding-bottom: 30px;
@@ -17,3 +30,4 @@
   width: 100%;
   height: 100%;
 }
+
