--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,18 +8,20 @@
 </head>
 <body>
 
-  <div id="header">
-    <% if signed_in? %>
-      Signed in as: <%= link_to current_user.email, user_path(current_user.id) %> <strong>|</strong> <%= link_to t('.sign_out'), sign_out_path, :method => :delete %>
-    <% else %>
-      <%= link_to t('.sign_in'), sign_in_path %>
-    <% end %>
+<div class="navigation">
+  <div class="container">
+    <ul>
+      <li><%= render "partials/signin" %>
+      <li></li>
+      <li></li>
   </div>
+</div>
 
-  <div id="flash">
-    <% flash.each do |key, value| %>
-      <div id="flash_<%= key %>"><%=h value %></div>
-    <% end %>
+    <div id="flash">
+      <% flash.each do |key, value| %>
+        <div id="flash_<%= key %>"><%=h value %></div>
+      <% end %>
+    </div>
   </div>
 
 <%= yield %>
