positions nav bar

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,12 +1,6 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
-
-
-.homepage-title {
-}
-
-.recent-posts {
-}
+@import "navigation";
 
 .embed-container {
   position: relative;
