--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -1,16 +1,14 @@
-<div class="navigation">
+<div class="nav">
   <div class="container">
-
-    <ul>
+    <ul class="pull-left">
       <li><%= render "partials/signin" %></li>
       <li><a href="#">Home</a></li>
       <li><a href="#">About</a></li>
     </ul>
 
-    <ul>
+    <ul class="pull-right">
       <li><a href="#">Contact</a></li>
       <li><a href="#">Careers</a></li>
     </ul>
-
   </div>
 </div>
