adds pill tabs in nav bar

--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -1,12 +1,11 @@
 <div class="nav">
   <div class="container">
-    <ul class="pull-left">
-      <li><%= render "partials/signin" %></li>
+    <ul class="pull-left nav nav-pills">
       <li><a href="#">Home</a></li>
       <li><a href="#">About</a></li>
     </ul>
 
-    <ul class="pull-right">
+    <ul class="pull-right nav nav-pills">
       <li><a href="#">Contact</a></li>
       <li><a href="#">Careers</a></li>
     </ul>
