adds jumbotron feature on homepage

--- a/app/views/homes/show.html.erb
+++ b/app/views/homes/show.html.erb
@@ -1,10 +1,4 @@
-<div class="homepage-title">
-  <h1>Welcome to MagicDB</h1>
-</div>
-
-<div class="homepage-description">
-  The most comprehensive magic trick database in the world. For magicians, by magicians.
-</div>
+<%= render 'partials/jumbotron' %>
 
 <% if signed_in? %>
     <p>
