--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -1,11 +1,15 @@
 <div class="nav">
   <div class="container">
-    <ul class="pull-left nav nav-pills">
-      <li><a href="#">Home</a></li>
+    <ul class="navbar-left nav nav-pills">
+      <li class="active"><a href="#">Home</a></li>
       <li><a href="#">About</a></li>
     </ul>
 
-    <ul class="pull-right nav nav-pills">
+    <div class="sign-in">
+      <%= render 'partials/signin' %>
+    </div>
+
+    <ul class="navbar-right nav nav-pills">
       <li><a href="#">Contact</a></li>
       <li><a href="#">Careers</a></li>
     </ul>
