--- a/app/views/partials/_signin.html.erb
+++ b/app/views/partials/_signin.html.erb
@@ -1,5 +1,5 @@
 <% if signed_in? %>
-  Signed in as: <%= link_to current_user.email, user_path(current_user.id) %> <strong>|</strong> <%= link_to t('.sign_out'), sign_out_path, :method => :delete %>
+  Welcome: <%= link_to current_user.email, user_path(current_user.id) %> <strong>|</strong> <%= link_to t('.sign_out'), sign_out_path, :method => :delete %>
 <% else %>
-  <%= link_to t('.sign_in'), sign_in_path %>
+  <%= link_to t('.sign_in'), sign_in_path %> or <%= link_to t('.sign_up'), sign_up_path %>
 <% end %>
