adds styling to jumbotron

--- a/app/views/partials/_jumbotron.html.erb
+++ b/app/views/partials/_jumbotron.html.erb
@@ -5,7 +5,7 @@
     </div>
 
     <div class="description">
-      The most comprehensive magic trick database in the world. For magicians, by magicians.
+      <p>The most comprehensive magic trick database in the world. For magicians, by magicians.</p>
     </div>
   </div>
 </div>
