--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -1,7 +1,7 @@
 <div class="nav">
   <div class="container">
     <ul class="navbar-left nav nav-pills">
-      <li class="active"><a href="#">Home</a></li>
+      <li class="active"><%= link_to "Home", root_path %></li>
       <li><a href="#">About</a></li>
     </ul>
 
