adds bootstrap responsive embed for youtube videos

--- a/app/assets/stylesheets/_navigation.scss
+++ b/app/assets/stylesheets/_navigation.scss
@@ -1,21 +1,25 @@
 .nav {
-    .container {
-      margin: 0 auto;
-      border-bottom: 5px solid black;
-      padding: 10px 0px;
-    }
+  .container {
+    margin: 0 auto;
+    border-bottom: 5px solid black;
+    padding: 10px 0px;
+  }
 
-    a {
-      color: #5a5a5a;
-      font-size: 15px;
-      font-weight: bold;
-      text-transform: uppercase;
-      padding: 14px 10px;
-    }
+  a {
+    color: #5a5a5a;
+    font-size: 15px;
+    font-weight: bold;
+    text-transform: uppercase;
+    padding: 14px 10px;
+  }
 
-    li {
-      display: inline;
-    }
+  li {
+    display: inline;
+  }
+
+  .navbar-right {
+    padding-top: 10px;
+  }
 
   .sign-in {
     display: inline;
