--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -3,15 +3,12 @@
     <ul class="navbar-left nav nav-pills">
       <li class="active"><%= link_to "Home", root_path %></li>
       <li><a href="#">About</a></li>
-    </ul>
-
-    <div class="sign-in">
-      <%= render 'partials/signin' %>
-    </div>
-
-    <ul class="navbar-right nav nav-pills">
       <li><a href="#">Contact</a></li>
       <li><a href="#">Careers</a></li>
+    </ul>
+
+    <ul class="navbar-right">
+      <%= render 'partials/signin' %>
     </ul>
   </div>
 </div>
