--- a/app/views/tricks/show.html.erb
+++ b/app/views/tricks/show.html.erb
@@ -10,6 +10,6 @@
   </p>
 </div>
 
-<div class="embed-container">
-  <%= embed(@trick.youtube_url) %>
+<div class="embed-responsive embed-responsive-16by9">
+  <iframe class="embed-responsive-item" src=<%= @trick.youtube_url %>></iframe>
 </div>
