--- a/app/views/partials/_jumbotron.html.erb
+++ b/app/views/partials/_jumbotron.html.erb
@@ -1,11 +1,13 @@
 <div class="jumbotron">
   <div class="container">
-    <div class="title">
+    <div class="col-lg-8">
       <h1>Welcome to MagicDB</h1>
     </div>
 
     <div class="description">
-      <p>The most comprehensive magic trick database in the world. For magicians, by magicians.</p>
+      <div class="col-lg-4">
+        <p>The most comprehensive magic trick database in the world. For magicians, by magicians.</p>
+      </div>
     </div>
   </div>
 </div>
