--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -3,8 +3,8 @@
     <ul class="navbar-left nav nav-pills">
       <li class="active"><%= link_to "Home", root_path %></li>
       <li><a href="#">About</a></li>
-      <li><a href="#">Contact</a></li>
-      <li><a href="#">Careers</a></li>
+      <li><a href="#">Tricks</a></li>
+      <li><a href="#">Posts</a></li>
     </ul>
 
     <ul class="navbar-right">
