--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -1,5 +1,6 @@
 <div class="nav">
   <div class="container">
+
     <ul class="navbar-left nav nav-pills">
       <li class="active"><%= link_to "Home", root_path %></li>
       <li><a href="#">About</a></li>
@@ -7,8 +8,13 @@
       <li><a href="#">Posts</a></li>
     </ul>
 
+    <div class="logo"><img src="assets/top_hat_mustache.png" alt="Top Hat Logo" height="45" width="45"></div>
+
+    <div class="title">MagicDB</div>
+
     <ul class="navbar-right">
       <%= render 'partials/signin' %>
     </ul>
+
   </div>
 </div>
