--- a/app/assets/stylesheets/_navigation.scss
+++ b/app/assets/stylesheets/_navigation.scss
@@ -24,6 +24,15 @@
     display: inline;
   }
 
+  .btn-default {
+    color: #5a5a5a;
+    font-size: 15px;
+    font-weight: bold;
+    text-transform: uppercase;
+    padding: 10px 10px;
+    border: none;
+  }
+
   .title {
     display: inline;
     font-family: lobster;
