adds purpose column to tricks table, dropdown select for trick.purpose field

--- a/app/views/tricks/new.html.erb
+++ b/app/views/tricks/new.html.erb
@@ -16,6 +16,9 @@
     </p>
 
     <p>
+      <%= form.label "Trick Type" %>
+      <%= form.select :purpose, ["Opener", "Closer", "Other"] %>
+    <p>
       <%= form.submit "Upload Trick" %>
     </p>
 
