--- a/app/views/tricks/show.html.erb
+++ b/app/views/tricks/show.html.erb
@@ -10,6 +10,12 @@
   </p>
 </div>
 
+<div class="trick-purpose">
+  <p>
+    <h3><strong>Type: </strong><%= @trick.purpose %></h3>
+  </p>
+</div>
+
 <div class="embed-responsive embed-responsive-4by3">
   <iframe class="embed-responsive-item" src=<%= @trick.youtube_url %>></iframe>
 </div>
