--- a/app/views/tricks/show.html.erb
+++ b/app/views/tricks/show.html.erb
@@ -16,6 +16,6 @@
   </p>
 </div>
 
-<div class="embed-responsive embed-responsive-4by3">
-  <iframe class="embed-responsive-item" src=<%= @trick.youtube_url %>></iframe>
+<div class="embed-responsive embed-responsive-16by9">
+  <iframe class="embed-responsive-item" type="text/html" src="<%= @trick.youtube_url %>"></iframe>
 </div>
