--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,5 +1,3 @@
-@import "bootstrap-sprockets";
-@import "bootstrap";
-@import "navigation";
-@import "homes_show";
-@import "jumbotron";
+@import 'bourbon';
+@import 'neat';
+@import 'bitters/bitters';
