--- a/app/views/tricks/show.html.erb
+++ b/app/views/tricks/show.html.erb
@@ -17,5 +17,5 @@
 </div>
 
 <div class="embed-responsive embed-responsive-16by9">
-  <iframe class="embed-responsive-item" type="text/html" src="<%= @trick.youtube_url %>"></iframe>
+  <iframe class="embed-responsive-item" src="<%= @trick.youtube_url %>"></iframe>
 </div>
