trick description can be toggled via jquery, container styling added for main content

--- a/app/views/tricks/index.html.erb
+++ b/app/views/tricks/index.html.erb
@@ -1,5 +1,12 @@
 <h1>All Tricks</h1>
 
+<div>
+  <%= button_to 'Add Trick', method: :get, remote: true %>
+</div>
+
+<div id="trick-form" style="display: none;">
+</div>
+
 <% @tricks.each do |trick| %>
   <ul>
     <li><%= link_to trick.name, trick %></li>
