--- a/app/views/tricks/new.html.erb
+++ b/app/views/tricks/new.html.erb
@@ -1,26 +1,3 @@
 <h1>Add New Trick</h1>
 
-<div class="new-trick-form">
-  <%= form_for @trick do |form| %>
-
-    <p>
-      <%= form.text_field :name, placeholder: 'Trick Name' %>
-    </p>
-
-    <p>
-      <%= form.text_area :description, placeholder: 'Trick Description' %>
-    </p>
-
-    <p>
-      <%= form.text_field :youtube_url, placeholder: 'Youtube URL' %>
-    </p>
-
-    <p>
-      <%= form.label "Trick Type" %>
-      <%= form.select :purpose, ["Opener", "Closer", "Other"] %>
-    <p>
-      <%= form.submit "Upload Trick" %>
-    </p>
-
-  <% end %>
-</div>
+<%= render 'form' %>
