--- a/app/views/tricks/_form.html.erb
+++ b/app/views/tricks/_form.html.erb
@@ -1,22 +1,22 @@
-<%= form_for @trick, remote: true do |form| %>
+<%= form_for @trick do |form| %>
 
-  <p>
-    <%= form.text_field :name, placeholder: 'Trick Name' %>
-  </p>
+<p>
+  <%= form.text_field :name, placeholder: 'Trick Name' %>
+</p>
 
-  <p>
-                          <%= form.text_area :description, placeholder: 'Trick Description' %>
-                              </p>
+<p>
+  <%= form.text_area :description, placeholder: 'Trick Description' %>
+</p>
 
-                                  <p>
-                                        <%= form.text_field :youtube_url, placeholder: 'Youtube URL' %>
-                                            </p>
+<p>
+  <%= form.text_field :youtube_url, placeholder: 'Youtube URL' %>
+</p>
 
-                                                <p>
-                                                      <%= form.label "Trick Type" %>
-                                                            <%= form.select :purpose, ["Opener", "Closer", "Other"] %>
-                                                                <p>
-                                                                      <%= form.submit "Upload Trick" %>
-                                                                          </p>
+<p>
+  <%= form.label "Trick Type" %>
+  <%= form.select :purpose, ["Opener", "Closer", "Other"] %>
+<p>
+  <%= form.submit "Upload Trick" %>
+</p>
 
-                                                                            <% end %>
+<% end %>
