--- a/app/views/tricks/show.html.erb
+++ b/app/views/tricks/show.html.erb
@@ -4,6 +4,19 @@
   </p>
 </div>
 
+<div class="trick-tags">
+  <% @tags.each do |tag| %>
+    <%= tag.keywords %>
+  <% end %>
+</div>
+
+<div class="tags-form">
+  <%= form_for ([@trick, @tag]) do |f| %>
+    <%= f.text_field :keywords, placeholder: "Enter, tags, like, this" %>
+    <%= f.submit "Add Tag" %>
+  <% end %>
+</div>
+
 <div class="trick-description">
   <div class="description-toggle btn btn-primary"><strong>Description</strong></div><<%= @trick.description %>
   <p class="description-body" style="display: none;">
