adds tagging to tricks

--- a/app/views/tricks/show.html.erb
+++ b/app/views/tricks/show.html.erb
@@ -10,12 +10,14 @@
   <% end %>
 </div>
 
-<div class="tags-form">
-  <%= form_for ([@trick, @tag]) do |f| %>
-    <%= f.text_field :keywords, placeholder: "Enter, tags, like, this" %>
-    <%= f.submit "Add Tag" %>
-  <% end %>
-</div>
+<% if signed_in? %>
+  <div class="tags-form">
+    <%= form_for ([@trick, @tag]) do |f| %>
+      <%= f.text_field :keywords, placeholder: "Enter, tags, like, this" %>
+      <%= f.submit "Add Tag" %>
+    <% end %>
+  </div>
+<% end %>
 
 <div class="trick-description">
   <div class="description-toggle btn btn-primary"><strong>Description</strong></div><<%= @trick.description %>
