add tagging to tricks

--- a/app/views/tricks/_form.html.erb
+++ b/app/views/tricks/_form.html.erb
@@ -13,6 +13,10 @@
 </p>
 
 <p>
+  <%= form.text_field :tag_list, placeholder: 'Enter,tags,like,this' %>
+</p>
+
+<p>
   <%= form.label "Trick Type" %>
   <%= form.select :purpose, ["Opener", "Closer", "Other"] %>
 <p>
